--- a/qr-generator.html
+++ b/qr-generator.html
@@ -72,8 +72,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
     <script>
         // Supabase bağlantı bilgileri
-        const SUPABASE_URL = 'https://egcklzfiyxxnvyxwoowq.supabase.co';
-        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImVnY2tsemZpeXh4bnZ5eHdvb3dxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDg0NjQxMTcsImV4cCI6MjA2NDA0MDExN30.dfRQv3lYFCaI1T5ydOw4HyoEJ0I1wOSIUcG8ueEbxKQ';
+        const SUPABASE_URL = 'SUPABASE_URL_BURAYA'; // Supabase Project URL
+        const SUPABASE_ANON_KEY = 'SUPABASE_ANON_KEY_BURAYA'; // Supabase anon public key
         const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
         
         document.addEventListener('DOMContentLoaded', () => {
