Supabase bağlantı bilgileri güncellendi ve tablolar oluşturuldu

--- a/qr-generator.html
+++ b/qr-generator.html
@@ -72,8 +72,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
     <script>
         // Supabase bağlantı bilgileri
-        const SUPABASE_URL = 'SUPABASE_URL_BURAYA'; // Supabase Project URL
-        const SUPABASE_ANON_KEY = 'SUPABASE_ANON_KEY_BURAYA'; // Supabase anon public key
+        const SUPABASE_URL = 'https://wihdzkvgttfwsiijxidy.supabase.co';
+        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndpaGR6a3ZndHRmd3NpaWp4aWR5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTA2MzA0MjIsImV4cCI6MjA2NjIwNjQyMn0.Cpn6y7ybyLA3uL-bjvsxPKoIw-J7I6eTE5cPGnBjOo4';
         const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
         
         document.addEventListener('DOMContentLoaded', () => {
