--- a/waiter-app-cordova/www/index.html
+++ b/waiter-app-cordova/www/index.html
@@ -126,8 +126,8 @@
                     <div class="mb-12 text-center">
                         <h2 class="text-3xl font-bold mb-4">QR Kod ile Garson Çağırma Sistemi</h2>
                         <p class="text-gray-400 max-w-2xl mx-auto">Müşterileriniz QR kodu tarayarak hızlıca garson çağırabilir. Garson paneli üzerinden tüm çağrıları anında görün ve hızlıca yanıtlayın.</p>
-                    </div>
-                    
+                        </div>
+
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                         <!-- QR Oluşturucu -->
                         <div class="bg-glass-bg border border-glass-border backdrop-blur-glass rounded-xl p-6">
@@ -162,9 +162,9 @@
                             <div class="bg-glass-bg border border-glass-border backdrop-blur-glass rounded-xl p-4 text-center">
                                 <h3 class="text-lg font-semibold mb-2">Masa 1</h3>
                                 <div class="bg-white p-2 rounded-lg mb-3">
-                                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://1sthillman.github.io/qr/customer.html?restaurant_id=DEMO&table_id=1" alt="Masa 1 QR" class="w-full">
+                                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://1sthillman.github.io/qr/waiter-call.html?restaurant_id=DEMO&table_id=1" alt="Masa 1 QR" class="w-full">
                                 </div>
-                                <a href="customer.html?restaurant_id=DEMO&table_id=1" target="_blank" class="inline-block bg-primary hover:bg-primary/80 text-white text-sm font-medium py-2 px-4 rounded-lg transition-all">
+                                <a href="waiter-call.html?restaurant_id=DEMO&table_id=1" target="_blank" class="inline-block bg-primary hover:bg-primary/80 text-white text-sm font-medium py-2 px-4 rounded-lg transition-all">
                                     <i class="ri-external-link-line mr-1"></i> Test Et
                                 </a>
                             </div>
@@ -173,9 +173,9 @@
                             <div class="bg-glass-bg border border-glass-border backdrop-blur-glass rounded-xl p-4 text-center">
                                 <h3 class="text-lg font-semibold mb-2">Masa 2</h3>
                                 <div class="bg-white p-2 rounded-lg mb-3">
-                                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://1sthillman.github.io/qr/customer.html?restaurant_id=DEMO&table_id=2" alt="Masa 2 QR" class="w-full">
+                                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://1sthillman.github.io/qr/waiter-call.html?restaurant_id=DEMO&table_id=2" alt="Masa 2 QR" class="w-full">
                                 </div>
-                                <a href="customer.html?restaurant_id=DEMO&table_id=2" target="_blank" class="inline-block bg-primary hover:bg-primary/80 text-white text-sm font-medium py-2 px-4 rounded-lg transition-all">
+                                <a href="waiter-call.html?restaurant_id=DEMO&table_id=2" target="_blank" class="inline-block bg-primary hover:bg-primary/80 text-white text-sm font-medium py-2 px-4 rounded-lg transition-all">
                                     <i class="ri-external-link-line mr-1"></i> Test Et
                                 </a>
                             </div>
@@ -184,9 +184,9 @@
                             <div class="bg-glass-bg border border-glass-border backdrop-blur-glass rounded-xl p-4 text-center">
                                 <h3 class="text-lg font-semibold mb-2">Masa 3</h3>
                                 <div class="bg-white p-2 rounded-lg mb-3">
-                                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://1sthillman.github.io/qr/customer.html?restaurant_id=DEMO&table_id=3" alt="Masa 3 QR" class="w-full">
+                                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://1sthillman.github.io/qr/waiter-call.html?restaurant_id=DEMO&table_id=3" alt="Masa 3 QR" class="w-full">
                                 </div>
-                                <a href="customer.html?restaurant_id=DEMO&table_id=3" target="_blank" class="inline-block bg-primary hover:bg-primary/80 text-white text-sm font-medium py-2 px-4 rounded-lg transition-all">
+                                <a href="waiter-call.html?restaurant_id=DEMO&table_id=3" target="_blank" class="inline-block bg-primary hover:bg-primary/80 text-white text-sm font-medium py-2 px-4 rounded-lg transition-all">
                                     <i class="ri-external-link-line mr-1"></i> Test Et
                                 </a>
                             </div>
@@ -195,9 +195,9 @@
                             <div class="bg-glass-bg border border-glass-border backdrop-blur-glass rounded-xl p-4 text-center">
                                 <h3 class="text-lg font-semibold mb-2">Masa 4</h3>
                                 <div class="bg-white p-2 rounded-lg mb-3">
-                                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://1sthillman.github.io/qr/customer.html?restaurant_id=DEMO&table_id=4" alt="Masa 4 QR" class="w-full">
+                                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://1sthillman.github.io/qr/waiter-call.html?restaurant_id=DEMO&table_id=4" alt="Masa 4 QR" class="w-full">
                                 </div>
-                                <a href="customer.html?restaurant_id=DEMO&table_id=4" target="_blank" class="inline-block bg-primary hover:bg-primary/80 text-white text-sm font-medium py-2 px-4 rounded-lg transition-all">
+                                <a href="waiter-call.html?restaurant_id=DEMO&table_id=4" target="_blank" class="inline-block bg-primary hover:bg-primary/80 text-white text-sm font-medium py-2 px-4 rounded-lg transition-all">
                                     <i class="ri-external-link-line mr-1"></i> Test Et
                                 </a>
                             </div>
@@ -206,9 +206,9 @@
                             <div class="bg-glass-bg border border-glass-border backdrop-blur-glass rounded-xl p-4 text-center">
                                 <h3 class="text-lg font-semibold mb-2">Masa 5</h3>
                                 <div class="bg-white p-2 rounded-lg mb-3">
-                                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://1sthillman.github.io/qr/customer.html?restaurant_id=DEMO&table_id=5" alt="Masa 5 QR" class="w-full">
+                                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://1sthillman.github.io/qr/waiter-call.html?restaurant_id=DEMO&table_id=5" alt="Masa 5 QR" class="w-full">
                                 </div>
-                                <a href="customer.html?restaurant_id=DEMO&table_id=5" target="_blank" class="inline-block bg-primary hover:bg-primary/80 text-white text-sm font-medium py-2 px-4 rounded-lg transition-all">
+                                <a href="waiter-call.html?restaurant_id=DEMO&table_id=5" target="_blank" class="inline-block bg-primary hover:bg-primary/80 text-white text-sm font-medium py-2 px-4 rounded-lg transition-all">
                                     <i class="ri-external-link-line mr-1"></i> Test Et
                                 </a>
                             </div>
