--- a/waiter-app-cordova/www/waiter-call.html
+++ b/waiter-app-cordova/www/waiter-call.html
@@ -40,7 +40,7 @@
     <!-- Yükleme Ekranı -->
     <div id="loadingPage" class="fixed inset-0 bg-secondary flex items-center justify-center z-50">
         <div class="text-center">
-            <div class="inline-block animate-spin rounded-full h-12 w-12 border-t-2 border-primary mb-4"></div>
+            <div class="spinner mb-4"></div>
             <p class="text-white">Yükleniyor...</p>
         </div>
     </div>
@@ -57,7 +57,7 @@
                 <h2 class="text-xl font-semibold mb-4">Garson Çağırma</h2>
                 <p class="text-gray-300 mb-6">Garsona ihtiyacınız olduğunda aşağıdaki butona tıklayarak çağırabilirsiniz.</p>
                 
-                <button id="callWaiterButton" class="w-full bg-primary hover:bg-primary/80 text-white font-medium py-3 px-4 rounded-lg transition-all flex items-center justify-center">
+                <button id="callWaiterButton" class="callWaiterButton w-full">
                     <i class="ri-user-voice-line mr-2"></i> Garsonu Çağır
                 </button>
             </div>
